# trends

./: .air.toml  .dockerignore  .env  .gitignore  AGENTS.md  Dockerconfig  Dockerfile  Makefile  README.md  binary.sh  commons.mk  dev  dev.ui.docker-compose.yml  docker-compose.infra.yml  docker-compose.yaml  docker-compose.yml  docker-compose.yml.bkup  feedback.md  go.mod  go.sum  package-lock.json  package.json  prod  start.bat  stop.bat  tailwind.config.js  trends.bas  trends.docker-compose.yml  trends.postman_collection.json  trends.vb
app/: .dockerignore  Dockerfile  README.md  conf.json  fetch.py  index.py  index_test.py  main.py  req.txt  result1.csv  result2.csv  unit_test.py
cmd/: main.go
css/: output.css
dashboard/: angular.json  dev.dockerfile  nginx.conf  package-lock.json  package.json  package.json.bkup  package.json.dev  prod  prod.dockerfile  start.bat
docs/: FIELDS.md  PROGRESS.md  UI.md
envoy/: Dockerfile  (+1 more)
trends-py/: check_bullish_logic.py  investigate_outlier.py  pyproject.toml
trends-py/app/: config.py  main.py  models.py  registry.py
trends-py/app/api/: debug.py  health.py  stream.py  tickers.py
trends-py/app/db/: seed.py  timescale.py
trends-py/app/engine/: futures.py  indicators.py  state.py
trends-py/app/ingest/: seed_upload.py  webhook.py  zerodha.py
trends-py/scripts/: compute_bullish_from_csv.py  simulate_ticks.py
trends-py/static/: index.html  terminal.js
trends-py/tests/: conftest.py  test_bullish.py  test_bullish_csv.py  test_futures.py  test_hold.py  test_indicators.py  test_live_mode.py  test_seeding.py
(+358 files in other folders)
