[project]
name = "trends-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
